# fdtd_1d_with_refractive_index

./: .gitignore  CMakeLists.txt  main.c  main_1d_gaussian.c  main_1d_sinwave.c  run.sh
about_fft/: CMakeLists.txt
about_fft/src/: dft.c  fft.c  getPeak.c  memo.c  set1DDoubleCSV_Column.c  set1DDoubleCSV_Row.c  set1DEyHz.c  setCoef1.c  setSigma.c  setSinWave.c  set_ey_timestep_csv.c
common_files/: CMakeLists.txt
common_files/include/: checkAlloc1DDouble.h  check_2_n_power.h  common_parameter.h  dft.h  frequency_analysis.h  getFilePath.h  getPeak.h  get_dt.h  init2DdoublePlane.h  memo_gaussian.h  set1DDoubleCSV_Column.h  set1DDoubleCSV_Row.h  set1DEyHz.h  set1DEyHz_half_calc.h  set1DIntCSV_Column.h  set2DVecCSV.h  setCoef1.h  setCoef2.h  setCoef3.h  setCoef4.h  setCoef5.h  setEps.h  setEtyCSV.h  setSigma.h  setSinWave.h  set_ey_timestep_csv.h  set_vec_timestep_csv.h  symmetryCheck.h
common_files/src/: antisymmetryCheck.c  checAlloc1DInt.c  checkAlloc1DDouble.c  check_2_n_power.c  dft.c  fft.c  frequency_analysis.c  getFilePath.c  getPeak.c  get_dt.c  init2DdoublePlane.c  set1DDoubleCSV_Column.c  set1DDoubleCSV_Row.c  set1DEyHz.c  set1DEyHz_half_calc.c  set1DIntCSV_Column.c  set2DVecCSV.c  setCoef1.c  setCoef2.c  setCoef3.c  setCoef4.c  setCoef5.c  setEps.c  setEtyCSV.c  setSigma.c  set_ey_timestep_csv.c  set_vec_timestep.c  swap.c  symmetryCheck.c
common_include/: antisymmetryCheck.h  checkAlloc1DInt.h  common_parameter.h  dft.h  fft.h  frequency_analysis.h  gaussian_memo.h  getEy.h  getPeak.h  memo.h  set1DEyHz.h  setCoef1.h  setCoef2.h  setEps.h  setEtyCSV.h  setSigma.h  setSinWave.h  sinwave_memo.h  swap.h
common_src/: CMakeLists.txt
common_src/src/: antisymmetryCheck.c  fft.c  set1DDoubleCSV_Column.c  set1DEyHz.c  setEps.c  setEtyCSV.c  setSigma.c  swap.c
csv_files/: after_fft_eyt_freq.csv  after_fft_gaussian_freq.csv  after_fft_sinwave_freq.csv  before_fft_eyt_time.csv  before_fft_input_gaussian_time.csv  before_fft_input_sinWave_time.csv  getPeak_of_fft.csv
ey_timestep_csvs/: ey_timestep_000000.csv  ey_timestep_000001.csv  ey_timestep_000002.csv  ey_timestep_000003.csv  ey_timestep_000004.csv  ey_timestep_000005.csv  ey_timestep_000006.csv  ey_timestep_000007.csv  ey_timestep_000008.csv  ey_timestep_000009.csv  ey_timestep_000010.csv  ey_timestep_000011.csv  ey_timestep_000012.csv  ey_timestep_000013.csv  ey_timestep_000014.csv  ey_timestep_000015.csv  ey_timestep_000016.csv  ey_timestep_000017.csv  ey_timestep_000018.csv  ey_timestep_000019.csv  ey_timestep_000020.csv  ey_timestep_000021.csv  ey_timestep_000022.csv  ey_timestep_000023.csv  ey_timestep_000024.csv  ey_timestep_000025.csv  ey_timestep_000026.csv  ey_timestep_000027.csv  ey_timestep_000028.csv  ey_timestep_000029.csv  ey_timestep_000030.csv  ey_timestep_000031.csv  ey_timestep_000032.csv  ey_timestep_000033.csv  ey_timestep_000034.csv  ey_timestep_000035.csv  ey_timestep_000036.csv  ey_timestep_000037.csv  ey_timestep_000038.csv  ey_timestep_000039.csv  (+16599 more)
fdtd1d_gaussian/: CMakeLists.txt
fdtd1d_gaussian/include/: memo_gaussian.h  setGaussianWave.h
fdtd1d_gaussian/src/: checkAlloc1DDouble.c  dft.c  gaussian_memo.c  getPeak.c  memo.c  memo_gaussian.c  set1DDoubleCSV_Row.c  set1DEyHz.c  setCoef1.c  setCoef2.c  setCoef3.c  setGaussianWave.c  setSinWave.c  set_ey_timestep_csv.c
fdtd1d_sinwave/: CMakeLists.txt
fdtd1d_sinwave/include/: memo_sinwave.h
fdtd1d_sinwave/src/: checAlloc1DInt.c  frequency_analysis.c  getEy.c  getFilePath.c  init2DdoublePlane.c  memo.c  memo_sinwave.c  set1DEyHz.c  setEps.c  setGaussianWave.c  setSinWave.c  sinwave_memo.c  symmetryCheck.c
memos/: memo_2024_01_13_Sat_07h_46min_13sec.txt  memo_2024_01_13_Sat_07h_51min_32sec.txt  memo_2024_01_13_Sat_07h_53min_01sec.txt  memo_2024_01_13_Sat_08h_05min_05sec.txt  memo_2024_01_13_Sat_08h_15min_36sec.txt  memo_2024_01_13_Sat_08h_16min_37sec.txt  memo_2024_01_13_Sat_08h_24min_12sec.txt  memo_2024_01_13_Sat_08h_26min_07sec.txt  memo_2024_01_13_Sat_08h_28min_11sec.txt  memo_2024_01_13_Sat_08h_30min_51sec.txt  memo_2024_01_13_Sat_08h_32min_20sec.txt  memo_2024_01_13_Sat_08h_35min_23sec.txt  memo_2024_01_13_Sat_08h_36min_15sec.txt  memo_2024_01_13_Sat_08h_38min_05sec.txt  memo_2024_01_13_Sat_08h_40min_25sec.txt  memo_2024_01_13_Sat_08h_43min_09sec.txt  memo_2024_01_13_Sat_08h_44min_32sec.txt  memo_2024_01_13_Sat_08h_47min_55sec.txt  memo_2024_01_13_Sat_16h_59min_12sec.txt  memo_2024_01_13_Sat_17h_00min_37sec.txt  memo_2024_01_13_Sat_17h_01min_36sec.txt  memo_2024_01_13_Sat_17h_02min_56sec.txt  memo_2024_01_13_Sat_17h_30min_43sec.txt  memo_2024_01_13_Sat_17h_32min_57sec.txt  memo_2024_01_13_Sat_17h_36min_21sec.txt  memo_2024_01_13_Sat_17h_43min_39sec.txt  memo_2024_01_13_Sat_17h_55min_18sec.txt  memo_2024_01_13_Sat_17h_58min_31sec.txt  memo_2024_01_13_Sat_18h_01min_07sec.txt  memo_2024_01_13_Sat_18h_08min_31sec.txt  memo_2024_01_13_Sat_18h_11min_30sec.txt  memo_2024_01_13_Sat_18h_22min_49sec.txt  memo_2024_01_13_Sat_18h_42min_38sec.txt  memo_2024_01_13_Sat_19h_30min_42sec.txt  memo_2024_01_13_Sat_19h_36min_57sec.txt  memo_2024_01_13_Sat_19h_39min_03sec.txt  memo_2024_01_13_Sat_19h_40min_22sec.txt  memo_2024_01_13_Sat_19h_41min_22sec.txt
python/: count_csv_files.py  createMP4.py  create_heatmap.py  create_pngs.py  mkmp4.py  plot1d.py  shell_command.py
